--- a/src/app/formulario-reactivo/formulario-reactivo.html
+++ b/src/app/formulario-reactivo/formulario-reactivo.html
@@ -1,1 +1,16 @@
-<p>formulario-reactivo works!</p>
+<form [formGroup]="profileForm" (ngSubmit)="handleSubmit()">
+  
+  <label>
+    Email
+    <input type="email" formControlName="email" />
+  </label>
+  <button type="submit"  [disabled]="!profileForm.valid">Submit</button>
+
+
+  @for(item of emails; track item){
+    <ul>
+        <li>{{item}}</li>
+    </ul>
+}
+
+</form>
