--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,6 @@
 <main class="main">
-  <a routerLink="/normal" >Formulario Normal</a><br/>
-  <a routerLink="/reactivo" >Formulario Reactivo</a>
+  <a routerLink="/normal">Formulario Normal</a><br /><br />
+  <a routerLink="/reactivo">Formulario Reactivo</a>
+  <br /><br />
 </main>
 <router-outlet></router-outlet>
