--- a/src/app/formulario-reactivo/formulario-reactivo.html
+++ b/src/app/formulario-reactivo/formulario-reactivo.html
@@ -1,16 +1,16 @@
 <form [formGroup]="profileForm" (ngSubmit)="handleSubmit()">
-  
+
   <label>
     Email
     <input type="email" formControlName="email" />
   </label>
-  <button type="submit"  [disabled]="!profileForm.valid">Submit</button>
+  <button type="submit" [disabled]="!profileForm.valid" class="espaciado" >Submit</button>
 
 
   @for(item of emails; track item){
-    <ul>
-        <li>{{item}}</li>
-    </ul>
-}
+  <ul>
+    <span class="id-estilo">{{item}} </span>
+  </ul>
+  }
 
 </form>
